# mp4csv

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  justfile  video-data.json
.github/workflows/: release.yml
src/: cli.rs  inout.rs  input.rs  main.rs  parser.rs  utils.rs
