[package]
name = "mp4csv"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["cargo", "env", "wrap_help"] }
csv = "1.2.1"
env_logger = "0.10.0"
file-format = "0.16.0"
log = "0.4.17"
mp4 = { path = "../_crates/rust-mp4" }
serde = { version = "1.0.161", features = ["derive"] }
time = { version = "0.3.20", features = ["formatting", "macros", "parsing", "serde-human-readable", "local-offset"] }
