[package]
name = "mp4csv"
version = "0.3.3"
edition = "2021"
license = "MIT"
description = "A tool to extract metadata from MP4 files and output them as CSV"
readme = "README.md"
repository = "https://www,github.com/evensolberg/mp4csv"
homepage = "https://www.github.com/evensolberg/mp4csv"
documentation = "https://www.github.com/evensolberg/mp4csv"
keywords = ["mp4", "metadata", "csv", "media"]
categories = ["media", "metadata", "export", "csv", "mp4", "statistics"]
authors = ["Even Solberg <even.solberg@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "4.3.0", features = ["cargo", "env", "wrap_help"] }
csv = "1.2.1"
env_logger = "0.10.0"
file-format = "0.18.0"
log = "0.4.17"
# mp4 = { path = "../_crates/rust-mp4" }
mp4 = "0.14.0"
serde = { version = "1.0.161", features = ["derive"] }
serde_with = { version = "3.0.0", features = ["chrono"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.7"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
